--- a/nodes/server.html
+++ b/nodes/server.html
@@ -7,31 +7,12 @@
         <input type="text" id="node-config-input-name">
     </div>
     <div class="form-row">
-        <label for="node-config-input-host" class="l-width"><i class="fa fa-location-arrow"></i> <span data-i18n="label.host"></span></label>
-        <input type="text" id="node-config-input-host">
+        <label for="node-config-input-broker" class="l-width"><i class="fa fa-globe"></i> <span data-i18n="label.broker"></span></label>
+        <input type="text" id="node-config-input-broker">
     </div>
     <div class="form-row">
         <label for="node-config-input-base_topic" class="l-width"><i class="fa fa-bookmark"></i> <span data-i18n="label.base_topic"></span></label>
         <input type="text" id="node-config-input-base_topic" placeholder="zigbee2mqtt">
-    </div>
-    <div class="form-row">
-        <label for="node-config-input-mqtt_port" class="l-width"><i class="fa fa-asterisk"></i> <span data-i18n="label.mqtt_port"></span></label>
-        <input type="text" id="node-config-input-mqtt_port" placeholder="1883">
-    </div>
-    <div class="form-row">
-        <label for="node-config-input-mqtt_username" class="l-width"><i class="fa fa-user"></i> <span data-i18n="label.mqtt_username"></span></label>
-        <input type="text" id="node-config-input-mqtt_username" autocomplete="new-password">
-    </div>
-    <div class="form-row">
-        <label for="node-config-input-mqtt_password" class="l-width"><i class="fa fa-lock"></i> <span data-i18n="label.mqtt_password"></span></label>
-        <input type="password" id="node-config-input-mqtt_password" autocomplete="new-password">
-    </div>
-    <div class="form-row">
-        <input type="checkbox" id="node-config-input-usetls" style="display: inline-block; width: auto; vertical-align: top;">
-        <label for="node-config-input-usetls" style="width: auto" data-i18n="label.use-tls"></label>
-        <div id="node-config-row-tls" >
-            <label style="width: auto; margin-left: 20px; margin-right: 10px;" for="node-config-input-tls"><span data-i18n="label.tls-config"></span></label><input style="width: 300px;" type="text" id="node-config-input-tls">
-        </div>
     </div>
     <div class="form-tips" data-i18n="[html]tip.deploy"></div>
 
@@ -45,24 +26,10 @@
                 value: null,
                 required: false
             },
-            host: {
-                value: null,
+            broker: {
+                type: 'mqtt-broker',
                 required: true
             },
-            mqtt_port: {
-                value: 1883,
-                required: false
-            },
-            mqtt_username: {
-                value: null,
-                required: false
-            },
-            mqtt_password: {
-                value: null,
-                required: false
-            },
-            tls: {type:"tls-config",required: false},
-            usetls: {value: false},
             base_topic: {
                 value: 'zigbee2mqtt',
                 required: true
