--- a/nodes/bridge.html
+++ b/nodes/bridge.html
@@ -111,6 +111,7 @@
 
                 <a href="#" id="z2m_map_refresh_btn" class="red-ui-item-add red-ui-button"><i class="fa fa-refresh"></i>&nbsp;<span data-i18n="map.refresh"></span></a>
                 <a href="#" id="z2m_map_fullscreen_btn" style="display:none;" class="red-ui-item-add red-ui-button"><i class="fa fa-external-link"></i>&nbsp;<span data-i18n="map.fullscreen"></span></a>
+                <span id="z2m_map_fetch_error" style="display:none;color:red;"></span>
                 <div id="z2m_map_img"></div>
             </div>
         </div>
@@ -263,6 +264,7 @@
                     $btn.find('.fa-refresh').addClass('fa-spin');
                     $btn.find('span').text(RED._("node-red-contrib-zigbee2mqtt/bridge:map.loading"));
                     $('#z2m_map_fullscreen_btn').hide();
+                    $('#z2m_map_fetch_error').hide();
                     $.getJSON('zigbee2mqtt/refreshMap', {
                         controllerID: node.server,
                         engine: $('#node-input-engine').val()
@@ -271,6 +273,11 @@
                         $btn.find('span').text(RED._("node-red-contrib-zigbee2mqtt/bridge:map.refresh"));
                         $('#z2m_map_fullscreen_btn').show();
                         $('#z2m_map_img').html(data.svg).find('svg').attr('width','100%').attr('height','100%');
+                    }).fail(function (jqxhr, textStatus, error) {
+                        $btn.find('.fa-refresh').removeClass('fa-spin');
+                        $btn.find('span').text(RED._("node-red-contrib-zigbee2mqtt/bridge:map.refresh"));
+                        $('#z2m_map_fetch_error').text(error);
+                        $('#z2m_map_fetch_error').show();
                     });
                 });
                 $('#z2m_map_fullscreen_btn').off('click').on('click', function () {
