--- a/nodes/in.html
+++ b/nodes/in.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="zigbee2mqtt-in">
+<script type="text/html" data-template-name="zigbee2mqtt-in">
     <link rel="stylesheet" href="zigbee2mqtt/static/css/multiple-select.css" type="text/css" />
     <link rel="stylesheet" href="zigbee2mqtt/static/css/common.css" type="text/css" />
 
