--- a/nodes/bridge.html
+++ b/nodes/bridge.html
@@ -20,7 +20,7 @@
 
 
 
-<script type="text/x-red" data-template-name="zigbee2mqtt-bridge">
+<script type="text/html" data-template-name="zigbee2mqtt-bridge">
     <link rel="stylesheet" href="zigbee2mqtt/static/css/multiple-select.css" type="text/css" />
     <link rel="stylesheet" href="zigbee2mqtt/static/css/common.css" type="text/css" />
     <link rel="stylesheet" href="zigbee2mqtt/static/tokeninput/token-input-facebook.css" type="text/css" />
