--- a/nodes/server.html
+++ b/nodes/server.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-template-name="zigbee2mqtt-server">
+<script type="text/html" data-template-name="zigbee2mqtt-server">
     <link rel="stylesheet" href="zigbee2mqtt/static/css/common.css" type="text/css" />
     <input autocomplete="false" name="hidden" type="text" style="display:none;">
 
